# meteor_engine

./: .gitmodules  CMakeLists.txt  imgui.ini
cmake/: imgui.cmake
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: MeteorEngine.hpp
engine/src/components/: BasicComponents.hpp  ChildrenComponent.hpp  ParentComponent.hpp  TransformComponents.hpp  UUIDComponent.hpp
engine/src/core/: Application.cpp  Application.hpp  Core.hpp  Event.hpp  Headers.hpp  Log.cpp  Log.hpp  Maths.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
engine/src/ecs/: ComponentPool.hpp  Config.hpp  Ecs.hpp  Entity.cpp  Entity.hpp  Registry.hpp  SparseSet.hpp  Types.hpp  View.hpp  World.hpp
engine/src/events/: Event.hpp
engine/src/log/: Logger.cpp  Logger.hpp
engine/src/platform/linux/: LinuxWindow.cpp  LinuxWindow.hpp
engine/src/platform/windows/: WindowsWindow.cpp  WindowsWindow.hpp
engine/src/renderer/: Buffer.cpp  Buffer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
engine/src/scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneModule.hpp
engine/src/serialization/: SceneSerializer.cpp  SceneSerializer.hpp  WorldSerializer.cpp  WorldSerializer.hpp
engine/src/systems/: SystemBase.hpp  TransformSystem.cpp  TransformSystem.hpp
sandbox/: CMakeLists.txt
sandbox/scenes/: start_scene.msc
sandbox/src/: Sandbox.cpp  Sandbox.hpp  main.cpp
